--- a/pkg/feature/testdata/apiDisabled.yaml
+++ b/pkg/feature/testdata/apiDisabled.yaml
@@ -11,7 +11,7 @@ apiDisabled:
       query: landscape == "stage" and globalAccount == "6034adc9-3441-494c-b438-a0eba4c5045a"
       variation: enabled
     - name: Disabled APIs on stage and prod
-      query: feature in ["nfsBackup", "peering", "redis"] and landscape != "dev"
+      query: feature in ["nfsBackup", "peering", "redis", "nfsBackupDiscovery"] and landscape != "dev"
       variation: disabled
   defaultRule:
     variation: enabled
