--- a/.github/workflows/pr-feature-toggles.yaml
+++ b/.github/workflows/pr-feature-toggles.yaml
@@ -24,6 +24,7 @@ jobs:
           go install github.com/santhosh-tekuri/jsonschema/cmd/jv@latest
       - name: Validate schema
         run: |
-          SCHEMA_URL="https://raw.githubusercontent.com/thomaspoignant/go-feature-flag/v1.31.2/.schema/flag-schema.json"
-          jv --assert-content --assert-format $SCHEMA_URL ./config/featureToggles/featureToggles.yaml
+          GO_FEATURE_FLAG_VERSION=$(grep "github.com/thomaspoignant/go-feature-flag " ./go.mod | awk '{print $2}')
+          SCHEMA_URL="https://raw.githubusercontent.com/thomaspoignant/go-feature-flag/$GO_FEATURE_FLAG_VERSION/.schema/flag-schema.json"
+          jv --assert-content --assert-format $SCHEMA_URL ./pkg/feature/default.yaml
 
