--- a/.github/workflows/build-image-pr.yaml
+++ b/.github/workflows/build-image-pr.yaml
@@ -12,7 +12,7 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  build-image:
+  ado-build:
     name: Build Image ADO
     runs-on: ubuntu-latest
     if: ${{ contains(github.event.pull_request.labels.*.name, 'pr-build-image') }}
@@ -22,7 +22,7 @@ jobs:
         with:
           workflow: build-image-pr-ado.yaml
 
-  no-build:
+  local-build:
     name: Build Image Locally
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'pr-build-image') }}
     runs-on: ubuntu-latest
