chore: build image if PR has label (#1533)

--- a/.github/workflows/build-image-pr.yaml
+++ b/.github/workflows/build-image-pr.yaml
@@ -12,9 +12,24 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  build-image:
-    uses: kyma-project/test-infra/.github/workflows/image-builder.yml@main # Usage: kyma-project/test-infra/.github/workflows/image-builder.yml@main
-    with:
-      name: cloud-manager
-      dockerfile: Dockerfile
-      export-tags: true
+  ado-build:
+    name: Build Image ADO
+    runs-on: ubuntu-latest
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'pr-build-image') }}
+    steps:
+      - name: Build Image ADO
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: build-image-pr-ado.yaml
+
+  local-build:
+    name: Build Image Locally
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'pr-build-image') }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Image Locally
+        uses: docker/build-push-action@v6
+        with:
+          outputs: type=cacheonly
+          push: false
+          tags: user/app:latest
