--- a/e2e/scripts/.env-example
+++ b/e2e/scripts/.env-example
@@ -1,6 +1,11 @@
 # GCP required
 GCP_PROJECT=gcp-project-name
 
+# Azure required
+AZURE_SUBSCRIPTION_ID=<azure-subcription-id>
+AZURE_DEFAULT_APP_ID=<azure-cloud-manager-default-app-id>
+AZURE_PEERING_APP_ID=<azure-cloud-manager-peering-app-id>
+
 # common optional
 SA_NAME_DEFAULT=
 ROLE_NAME_DEFAULT=
