--- a/e2e/scripts/.env-example
+++ b/e2e/scripts/.env-example
@@ -6,6 +6,9 @@ AZURE_SUBSCRIPTION_ID=<azure-subcription-id>
 AZURE_DEFAULT_APP_ID=<azure-cloud-manager-default-app-id>
 AZURE_PEERING_APP_ID=<azure-cloud-manager-peering-app-id>
 
+# AWS required
+AWS_ACCOUNT=12121212
+
 # common optional
 SA_NAME_DEFAULT=
 ROLE_NAME_DEFAULT=
