chore: e2e creds to garden

--- a/e2e/scripts/.env-example
+++ b/e2e/scripts/.env-example
@@ -3,8 +3,7 @@ GCP_PROJECT=gcp-project-name
 
 # Azure required
 AZURE_SUBSCRIPTION_ID=<azure-subcription-id>
-AZURE_DEFAULT_APP_ID=<azure-cloud-manager-default-app-id>
-AZURE_PEERING_APP_ID=<azure-cloud-manager-peering-app-id>
+AZURE_DEFAULT_APP_ID=<azure-cloud-manager-app-id>
 
 # AWS required
 AWS_ACCOUNT=12121212
@@ -18,3 +17,13 @@ SA_NAME_PEERING=
 ROLE_NAME_PEERING=
 ROLE_FILE_PEERING=
 
+# Garden key storage, optional
+GARDEN_KUBECONFIG=<path to garden kubeconfig>
+
+AWS_GARDEN_DEFAULT_SECRET=<garden secret name for CM credentials>
+AWS_GARDEN_PEERING_SECRET=<garden secret name for CM credentials>
+
+GCP_GARDEN_DEFAULT_SECRET=<garden secret name for CM credentials>
+GCP_GARDEN_PEERING_SECRET=<garden secret name for CM credentials>
+
+AZURE_GARDEN_SECRET=<garden secret name for CM credentials>
