--- a/.github/workflows/build-image-pr.yaml
+++ b/.github/workflows/build-image-pr.yaml
@@ -1,8 +1,13 @@
 name: Cloud-Manager Build Image PR
 
 on:
+  pull_request:
+    types: [labeled]
+    paths-ignore:
+      - .github/workflows/stale.yaml
+      - docs/**
   pull_request_target:
-    types: [opened, synchronize, reopened, ready_for_review, labeled]
+    types: [opened, synchronize, reopened, ready_for_review]
     paths-ignore:
       - .github/workflows/stale.yaml
       - docs/**
