--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
@@ -72,6 +72,7 @@ spec:
                   description: |-
                     GCP Region Name (as specified in https://cloud.google.com/filestore/docs/regions) where this backup should be created.
                     If not specified, region of the GcpNfsVolume is used for the backup.
+                  pattern: ^$|^(asia-east1|asia-northeast1|asia-northeast2|asia-northeast3|asia-south1|asia-southeast1|asia-southeast2|australia-southeast1|europe-north1|europe-west1|europe-west2|europe-west3|europe-west4|europe-west6|northamerica-northeast1|southamerica-east1|us-central1|us-east1|us-east4|us-west1|us-west2|us-west3|us-west4)$
                   type: string
                   x-kubernetes-validations:
                     - message: Location is immutable.
