feat: Add module label to Kustomize commonLabels

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -16,6 +16,7 @@ namePrefix: cloud-
 
 commonLabels:
   app.kubernetes.io/component: cloud-manager.kyma-project.io
+  kyma-project.io/module: cloud-manager
 
 resources:
 - ../crd
