--- a/pkg/feature/ff_ga.yaml
+++ b/pkg/feature/ff_ga.yaml
@@ -46,6 +46,13 @@ vpcPeeringSync:
   defaultRule:
     variation: disabled
 
+ipRangeRefactored:
+  variations:
+    enabled: true
+    disabled: false
+  defaultRule:
+    variation: disabled
+
 nfs41Gcp:
   variations:
     enabled: true
