--- a/config/crd/bases/cloud-resources.kyma-project.io_awsredisclusters.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_awsredisclusters.yaml
@@ -54,6 +54,7 @@ spec:
                     annotations:
                       additionalProperties:
                         type: string
+                      maxProperties: 64
                       type: object
                     extraData:
                       additionalProperties:
@@ -62,8 +63,11 @@ spec:
                     labels:
                       additionalProperties:
                         type: string
+                      maxProperties: 64
                       type: object
                     name:
+                      maxLength: 253
+                      pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                       type: string
                   type: object
                 autoMinorVersionUpgrade:
