--- a/config/crd/bases/cloud-resources.kyma-project.io_azureredisclusters.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_azureredisclusters.yaml
@@ -51,6 +51,7 @@ spec:
                     annotations:
                       additionalProperties:
                         type: string
+                      maxProperties: 64
                       type: object
                     extraData:
                       additionalProperties:
@@ -59,8 +60,11 @@ spec:
                     labels:
                       additionalProperties:
                         type: string
+                      maxProperties: 64
                       type: object
                     name:
+                      maxLength: 253
+                      pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                       type: string
                   type: object
                 ipRange:
