--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
@@ -55,6 +55,7 @@ spec:
                     annotations:
                       additionalProperties:
                         type: string
+                      maxProperties: 64
                       type: object
                     extraData:
                       additionalProperties:
@@ -63,8 +64,11 @@ spec:
                     labels:
                       additionalProperties:
                         type: string
+                      maxProperties: 64
                       type: object
                     name:
+                      maxLength: 253
+                      pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                       type: string
                   type: object
                 ipRange:
