--- a/config/ui-extensions/awsredisclusters/cloud-resources.kyma-project.io_awsredisclusters_ui.yaml
+++ b/config/ui-extensions/awsredisclusters/cloud-resources.kyma-project.io_awsredisclusters_ui.yaml
@@ -154,7 +154,7 @@ data:
     icon: shelf
     description: >-
         AWS Redis Cluster description here
-  list: |-
+  list: |
     - source: status.state
       name: status.state
       sort: true
