--- a/config/ui-extensions/awsnfsvolumerestores/cloud-resources.kyma-project.io_awsnfsvolumerestores_ui.yaml
+++ b/config/ui-extensions/awsnfsvolumerestores/cloud-resources.kyma-project.io_awsnfsvolumerestores_ui.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  details: |-
+  details: |
     body:
       - name: spec.source.backup
         widget: Panel
@@ -21,7 +21,7 @@ data:
           - widget: Labels
             source: state
             name: status.state
-  form: |-
+  form: |
     - path: spec.source.backup
       name: spec.source.backup
       widget: FormGroup
@@ -34,7 +34,7 @@ data:
           name: spec.source.backup.namespace
           widget: Text
           required: false
-  general: |-
+  general: |
     resource:
         kind: AwsNfsVolumeRestore
         group: cloud-resources.kyma-project.io
@@ -46,7 +46,7 @@ data:
     icon: shelf
     description: >-
         AWS NFS Volume Restores description here
-  list: |-
+  list: |
     - source: spec.source.backup.name
       name: spec.source.backup.name
       sort: true
@@ -56,7 +56,7 @@ data:
     - source: status.state
       name: status.state
       sort: true
-  translations: |-
+  translations: |
     en:
       configuration: Configuration
       status: Status
