--- a/config/ui-extensions/awsredisinstances/cloud-resources.kyma-project.io_awsredisinstances_ui.yaml
+++ b/config/ui-extensions/awsredisinstances/cloud-resources.kyma-project.io_awsredisinstances_ui.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  details: |-
+  details: |
     body:
       - name: configuration
         widget: Panel
@@ -143,7 +143,7 @@ data:
     icon: shelf
     description: >-
         AwsRedisInstance description here
-  list: |-
+  list: |
     - source: status.state
       name: status.state
       sort: true
