--- a/config/ui-extensions/azurevpcdnslinks/cloud-resources.kyma-project.io_azurevpcdnslinks_ui.yaml
+++ b/config/ui-extensions/azurevpcdnslinks/cloud-resources.kyma-project.io_azurevpcdnslinks_ui.yaml
@@ -28,7 +28,7 @@ data:
       name: spec.remoteTenant
       widget: Text
       disableOnEdit: true
-  general: |-
+  general: |
     resource:
         kind: AzureVpcDnsLink
         group: cloud-resources.kyma-project.io
@@ -40,7 +40,7 @@ data:
     icon: tnt/network
     description: >-
         AzureVpcDnsLinks description here
-  list: |-
+  list: |
     - source: spec.remoteLinkName
       name: spec.remoteLinkName
       sort: true
@@ -56,7 +56,7 @@ data:
     - source: status.state
       name: status.state
       sort: true
-  translations: |-
+  translations: |
     en:
       configuration: Configuration
       status: Status
