--- a/config/ui-extensions/gcpredisinstances/cloud-resources.kyma-project.io_gcpredisinstances_ui.yaml
+++ b/config/ui-extensions/gcpredisinstances/cloud-resources.kyma-project.io_gcpredisinstances_ui.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  details: |-
+  details: |
     body:
       - name: configuration
         widget: Panel
@@ -168,7 +168,7 @@ data:
     icon: shelf
     description: >-
         GcpRedisInstance description here
-  list: |-
+  list: |
     - source: status.state
       name: status.state
       sort: true
