--- a/config/ui-extensions/gcpsubnets/cloud-resources.kyma-project.io_gcpsubnets_ui.yaml
+++ b/config/ui-extensions/gcpsubnets/cloud-resources.kyma-project.io_gcpsubnets_ui.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  details: |-
+  details: |
     body:
       - name: configuration
         widget: Panel
@@ -20,11 +20,11 @@ data:
           - name: status.state
             source: state
             widget: Labels
-  form: |-
+  form: |
     - path: spec.cidr
       name: spec.cidr
       required: true
-  general: |-
+  general: |
     resource:
         kind: GcpSubnet
         group: cloud-resources.kyma-project.io
