--- a/config/ui-extensions/gcpvpcpeerings/cloud-resources.kyma-project.io_gcpvpcpeerings_ui.yaml
+++ b/config/ui-extensions/gcpvpcpeerings/cloud-resources.kyma-project.io_gcpvpcpeerings_ui.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  details: |-
+  details: |
     body:
         - name: configuration
           widget: Panel
@@ -45,7 +45,7 @@ data:
       widget: Text
       disableOnEdit: true
       description: Immutable once set.
-  general: |-
+  general: |
     resource:
         kind: GcpVpcPeering
         group: cloud-resources.kyma-project.io
@@ -57,7 +57,7 @@ data:
     icon: tnt/network
     description: >-
         Description here
-  list: |-
+  list: |
     - source: spec.importCustomRoutes
       name: spec.importCustomRoutes
       sort: true
@@ -83,7 +83,7 @@ data:
          - Disconnected
         warning:
          - Deleting
-  translations: |-
+  translations: |
     en:
       configuration: Configuration
       status: Status
