--- a/config/ui-extensions/ipranges/cloud-resources.kyma-project.io_ipranges_ui.yaml
+++ b/config/ui-extensions/ipranges/cloud-resources.kyma-project.io_ipranges_ui.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  details: |-
+  details: |
     body:
         - name: configuration
           widget: Panel
@@ -37,14 +37,14 @@ data:
     icon: tnt/network
     description: >-
         IpRange description here
-  list: |-
+  list: |
     - source: status.cidr
       name: status.cidr
       sort: true
     - source: status.state
       name: status.state
       sort: true
-  translations: |-
+  translations: |
     en:
       spec.cidr: Requested CIDR
       metadata.namespace: Namespace
