chore(e2e): checkout, setup go

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -6,30 +6,35 @@ jobs:
   init:
     runs-on: ubuntu-latest
     steps:
-    - name: Write KUBECONFIG to file
-      run: |
-        printf '%s' "${{ secrets.GARDENER }}" > kubeconfig-garden.yaml
-    - name: List secrets in garden namespace
-      run: |
-       KUBECONFIG=kubeconfig-garden.yaml kubectl get secrets -n garden-spm-test01
-    - name: Write e2e config file
-      run: |
-        cat <<EOF > e2e-config.yaml
-        gardenKubeconfig: kubeconfig-garden.yaml
-        shootPrefix: pp
-        kcpNamespace: kcp-system
-        gardenNamespace: garden-spm-test01
-        skrNamespace: default
-        subscriptions:
-          - name: spm-aws-subscription
-            provider: aws
-            isDefault: true
-        networkOwner: gardener
-        oidcClientId: ${{ vars.OIDC_CLIENT_ID }}
-        oidcIssuerUrl: ${{ vars.OIDC_ISSUER_URL }}
-        administrators:
-            - vladimir.andjelkoski@sap.com
-            - dl_623b719a6a0d2d029907bee0@global.corp.sap
-        EOF
-        
-        cat e2e-config.yaml
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+      - name: Display Go version
+        run: go version
+      - name: Write KUBECONFIG to file
+        run: |
+          printf '%s' "${{ secrets.GARDENER }}" > kubeconfig-garden.yaml
+      - name: Write e2e config file
+        run: |
+          cat <<EOF > e2e-config.yaml
+          gardenKubeconfig: kubeconfig-garden.yaml
+          shootPrefix: pp
+          kcpNamespace: kcp-system
+          gardenNamespace: garden-spm-test01
+          skrNamespace: default
+          subscriptions:
+            - name: spm-aws-subscription
+              provider: aws
+              isDefault: true
+          networkOwner: gardener
+          oidcClientId: ${{ vars.OIDC_CLIENT_ID }}
+          oidcIssuerUrl: ${{ vars.OIDC_ISSUER_URL }}
+          administrators:
+              - vladimir.andjelkoski@sap.com
+              - dl_623b719a6a0d2d029907bee0@global.corp.sap
+          EOF
+          
+          cat e2e-config.yaml
