chore(e2e): Create tmp dir

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -43,3 +43,7 @@ jobs:
           EOF
       - name: Display e2e config file
         run: cat e2e-config.yaml
+      - name: Create tmp directory
+        run: mkdir ./tmp
+      - name: List directory
+        run: ls -la
