--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -81,6 +81,10 @@ jobs:
           ENVTEST_K8S_VERSION=$(grep "ENVTEST_K8S_VERSION = " Makefile | awk -F '[[:space:]]*=[[:space:]]*' '{print $2}')
           echo "ENVTEST_K8S_VERSION is $ENVTEST_K8S_VERSION"
           echo "ENVTEST_K8S_VERSION=$ENVTEST_K8S_VERSION" >> $GITHUB_ENV
+      - name: Setup envtest
+        run: |
+          echo "ENVTEST_K8S_VERSION is $ENVTEST_K8S_VERSION"
+          ./bin/setup-envtest use $ENVTEST_K8S_VERSION --bin-dir $PWD/bin -p path
       - name: Run K8S
         run: |
           echo "ENVTEST_K8S_VERSION is $ENVTEST_K8S_VERSION"
